fix bugs free test 2022-07-29